# billygrace_technical_assignment

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  create_env.sh  docker-compose-ci.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  mypy.ini  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/constants/: common.py  creatives.py
backend/app/models/: creatives.py
backend/app/repository/creatives/: creatives.py  schemas.py
backend/app/routers/: account.py  creatives.py
backend/app/routers/account/: account.py  models.py
backend/app/routers/creatives/: constants.py  creatives.py  models.py
backend/app/storage/: creatives.py
backend/app/tests/: conftest.py
backend/app/tests/repository/: conftest.py  test_creatives.py
backend/app/tests/routers/: conftest.py  test_creatives.py
backend/app/tests/storage/: conftest.py  test_creatives.py
backend/db_migrations/: 01_init.sql  02_populate_dim_combined_creative.sql  04_indexes.sql
frontend/: .env  .eslintignore  .unimportedrc.json  Dockerfile  nginx.conf  package-lock.json  package.json  playwright.config.js
frontend/src/: App.js  config-global.js  index.js
frontend/src/api/: api.js
frontend/src/auth/: AuthGuard.js  GuestGuard.js  JwtContext.js  LoginPasswordContext.js  useAuthContext.js  utils.js
frontend/src/hooks/: useLocalStorage.js
frontend/src/locales/: ThemeLocalization.js  config-lang.js  i18n.js  index.js  useLocales.js
frontend/src/utils/: axios.js
frontend/tests/: e2e.spec.js
(+86 files in other folders)
